[project]
name = "tax-reform-did"
version = "0.1.0"
description = "Difference-in-Differences analysis of the 1986 Tax Reform Act and married women's labor supply (replication of Eissa 1996)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["auxiliary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]